--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -56,7 +56,7 @@ other = "{{ .Format \"Monday, Jan 2, 2006 15:04\" }}"
 other = "for you."
 
 [postToc]
-other = "TOC"
+other = "Table of contents"
 
 [postRecommendArticles]
 other = "Recommend these articles"
