--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -68,7 +68,7 @@ other = "More"
 # Category
 ###################
 [categoriesDescription]
-other = "Read an article by categories. You can read the recent article when you click the title."
+other = ""
 
 [categoriesCount]
 other = " EA"
@@ -77,7 +77,7 @@ other = " EA"
 # Tag
 ###################
 [tagsDescription]
-other = "Read an article by tags."
+other = ""
 
 ###################
 # Not found 404
