--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -4,13 +4,16 @@
 [menuCategories]
 other = "Categories"
 
+[menuSubCategories]
+other = "Sub Categories"
+
 [menuTags]
 other = "Tags"
 
 [menuProjects]
 other = "Projects"
 
-[menuAboutMe]
+[menuAbout]
 other = "About Me"
 
 [menuBurgerTitle]
