upload first posting3

--- a/content/post/신학전공 개발자의 개발입문기.md
+++ b/content/post/신학전공 개발자의 개발입문기.md
@@ -10,7 +10,7 @@ draft: true
 
 이미 제목에서 밝혔지만 나는 흔히 말하는 비전공 출신 개발자다. 물론 요즘은 워낙 비전공 개발자가 많다 보니 특별한 이력은 아니지만, 굳이 학문적 유사성을 따진다면 신학과 컴퓨터공학은 양끝단에 있지 않나 싶다. ~~`뇌피셜`~~   
 
-그러나 일반적 기대와 달리 이 글의 목적은 요새 유행처럼 번지는 "당신도 이렇게 하면 개발자가 될 수 있다!"라거나 "고난과 역경을 극복한 비전공 개발자의 성공기"같은 것은 아니다. 굳이 따지자면 담백하게 소개하는 전직 요약기 정도가 적당하다.   
+그러나 일반적 기대와 달리 이 글의 성격은 _"당신도 이렇게 하면 개발자가 될 수 있다!"_ 혹은 _"고난과 역경을 극복한 비전공 개발자의 성공기"_ 같은 거창한 것은 아니다. 굳이 따지자면 담백하게 소개하는 전직 요약기 정도가 적당하다.   
 
 ![](/images/blog_image/olaf1.jpg#center75)
 ![](/images/blog_image/olaf2.jpg#center75)   
@@ -19,94 +19,94 @@ draft: true
 # 1. 신학교와 편집기자   
    
 
-나는 2011년부터 2017년까지 신학교에서 신학을 전공했다. 그와중에 군대도 다녀오고 결혼까지 헀으니 참 빈틈없이 살았다는 생각이 든다. 심지어 하루도 낮과 밤으로 쪼개 낮에는 직장생활을 하고 밤에는 대학교에서 수업을 들었다. 그때 선택한 직업이 편집기자였는데 학술논문집을 주로 출판하는 작은 출판사였다. 비록 월급은 적었지만 야간 수업을 참석하는 것에 많은 배려를 해주셨고, 또 하루종일 논문을 읽고 교정하는 일도 꽤나 적성에 맞았기에 약 2년 반을 근무했다.   
+나는 2011년부터 2017년까지 신학교에서 신학을 전공했다. 그 사이 군대도 다녀오고 결혼도 헀으니 꽤 빈틈없이 살았다는 생각이 든다. 이 시기엔 하루도 낮과 밤으로 쪼개 낮에는 직장생활을 하고 밤에는 대학교에서 수업을 들었다. 그때 선택한 직업이 편집기자였는데 학술논문집을 주로 출판하는 작은 출판사였다. 비록 월급은 적었지만 야간 수업을 참석하는 것에 많은 배려를 해주셨고, 또 온종일 논문을 읽고 교정하는 일도 적성에 맞았기에 약 2년 반을 근무했다.   
 
-그러나 인생이란 이제 좀 길을 찾았다 싶으면 전혀 새로운 길에 우리를 던져놓는 얄미운 놈이다. 나 역시 17년도에 이 같은 시기를 보냈는데 이에 관한 이야기를 쓰면 앞서 말한 `담백한`이야기에서 한참 벗어나기에 지금은 넘어가려한다. ~~`언젠가 기회가 되면 맵고 짠 이야기 특집으로..`~~   
+그러나 인생이란 이제 좀 길을 찾았다 싶으면 전혀 새로운 길에 우리를 던져놓는 얄미운 놈이다. 나 역시 17년도에 이 같은 시기를 보냈는데 이에 관한 이야기를 쓰면 앞서 말한 `담백한` 이야기에서 한참 벗어나기에 지금은 넘어가려 한다. ~~`언젠가 기회가 되면 맵고 짠 이야기 특집으로..`~~   
 
 ## _졸업과 퇴사   
 
 졸업과 동시에 출판사에 사직서를 제출했다. 사직서를 제출할 때까지만 해도 나름의 계획이 있었다.
 
-![](/images/blog_image/mike.jpg#center75) _면접 한번이면 깨닫게 된다_   
+![](/images/blog_image/mike.jpg#center75) _면접 한 번이면 깨닫게 된다_   
 
-나의 계획들이 너무 낙관적이었음을 깨닫는 데는 한 달이 체 걸리지 않았다. 수많은 회사에 이력서를 넣었지만 대부분의 회사는 면접기회 조차 잡지 못했다. 이때 나는 일종의 악순환에 빠져 있었는데, 생계를 책임지고 있는 유부남으로서 서둘러 취업해야 한다는 초조함에 무분별한 이력서를 남발했고, 이는 서류탈락과 초조함 증가로 이어졌다.   
+나의 계획들이 너무 낙관적이었음을 깨닫는 데는 한 달이 채 걸리지 않았다. 수많은 회사에 이력서를 넣었지만 대부분의 회사는 면접 기회 조차 잡지 못했다. 이때 나는 일종의 악순환에 빠져 있었는데, 생계를 책임지고 있는 유부남으로서 서둘러 취업해야 한다는 초조함에 무분별한 이력서를 남발했고, 이는 서류탈락과 초조함 증가로 이어졌다.   
 
-이때 이러한 악순환을 끊어준 것이 아내였다. "일단은 내가 돈 벌테니 좀 더 준비해서 취직해"라는 말과 함께 진짜로 **금새 취업을 해버렸다.** `지금 생각해도 능력자가 아닐 수 없다.` 덕분에 나는 조금 숨통이 틔여 진지하게 고민할 기회가 생겼고. 그 결과 오래 전부터 가슴 한켠에 묻어둔 선택지를 꺼내게 되었다.   
+이때 이러한 악순환을 끊어준 것이 아내였다. "일단은 내가 돈 벌 테니 좀 더 준비해서 취직해"라는 말과 함께 진짜로 **금세 취업을 해버렸다.** `지금 생각해도 능력자가 아닐 수 없다.` 덕분에 나는 조금 숨통이 트여 진지하게 고민할 기회가 생겼고. 그 결과 오래전부터 가슴 한 켠에 묻어둔 선택지를 꺼내게 되었다.   
 
 ![](/images/blog_image/study.jpg#center50)
 
-## _언제부터 묻어둔 선택지 인지?   
+## _언제부터 묻어둔 선택지인지?   
    
-만약 당신이 컴퓨터에 익숙하지 않다면 `컴퓨터가 고장 났을 떄 가장 먼저 떠오르는 친구`가 한명쯤 있을 것이다. 학창시설 내가 `그 친구`역할을 담당하고 있었다. 왜 그랬는지 모르지만 주변에 컴퓨터가 고장났다는 친구가 있으면 달려가서 고쳐주곤했다. 물론 대부분은 Windows를 재설치한다거나 렘슬롯을 지우개로 문질러서 해결되는 정도의 일이었지만 그게 그렇게 재밌었다. 아마 너무 갖고 싶어 한이 맺혔던 `과학상자`를 대신한 장난감이지 않았나 싶다.  
+만약 당신이 컴퓨터에 익숙하지 않다면 `컴퓨터가 고장 났을 때 가장 먼저 떠오르는 친구`가 한 명쯤 있을 것이다. 학창 시설 내가 `그 친구` 역할을 담당하고 있었다. 왜 그랬는지 모르지만 주변에 컴퓨터가 고장 났다는 친구가 있으면 달려가서 고쳐주곤 했다. 물론 대부분은 Windows를 재설치한다거나 RAM을 지우개로 문질러서 해결되는 정도의 일이었지만 그게 그렇게 재밌었다. 아마 너무 갖고 싶어 한이 맺혔던 `과학상자`를 대신한 장난감이지 않았나 싶다.  
 
-순수하게 SW의 매력을 알게된건 좀 더 나중 일이다. 24살 즈음에 컴퓨터활용능력1급 자격 시험을 공부할 일이 생겼다. 그때 VBA로 프로지저를 작성해 문제를 해결하는 방법을 배웠는데 하다보니 **너무 재밌었다.** 기존에 없던 새로운 기능을 만든다는 느낌이 새롭게 다가왔고, 문제를 해결하는 수많은 선택지가 있다는 점이 매력적으로 느껴졌다. 이때 처음으로 언젠가 기회가 되면 SW개발을 배워보고 싶다고 생각한 것 같다. ~~`그리고 그 기회가 생각보다 빨리왔다.`~~
+순수하게 SW의 매력을 알게 된 건 좀 더 나중 일이다. 24살 즈음에 컴퓨터활용능력 1급 자격시험을 공부할 일이 생겼다. 그때 VBA로 프로지저를 작성해 문제를 해결하는 방법을 배웠는데 하다 보니 **너무 재밌었다.** 기존에 없던 새로운 기능을 만든다는 느낌이 새롭게 다가왔고, 문제를 해결하는 수많은 선택지가 있다는 점이 매력적으로 느껴졌다. 이때 처음으로 언젠가 기회가 되면 SW 개발을 배워보고 싶다고 생각한 것 같다. ~~`그리고 그 기회가 생각보다 빨리 왔다.`~~
 
 # 2. Into the Unknown 
 
-일단 시작하기로 마음먹은 이상 망설일 것은 없었다. 하루종일 컴퓨터 앞에 앉아 찾아본 결과 국비지원 교육에 SW개발자 양성코스가 있다는 것을 알게되었다. 물론 이 과정에서 국비지원 교육에 대한 여러가지 부정적 정보도 접하게 되었으나, 프로그래밍에 완벽히 문외한인 입장에서 **국비지원 교육보다 빠르게 개발자 커리어를 시작할 수 있는 길은 없다**고 판단하였고 지금도 그 생각은 변함이 없다. _게다가 한 달 30만원씩 돈을 받으면서 공부할 수 있다!_  `그러나 국비지원 과정의 여러 한계점은 부정할 수 없는데 이는 나중에 기회가 있으면 써볼 계획이다.`
+일단 시작하기로 마음먹은 이상 망설일 것은 없었다. 온종일 컴퓨터 앞에 앉아 찾아본 결과 국비지원 교육에 SW 개발자 양성코스가 있다는 것을 알게 되었다. 물론 이 과정에서 국비지원 교육에 대한 여러 가지 부정적 정보도 접하게 되었으나, 프로그래밍에 완벽히 문외한인 입장에서 **국비지원 교육보다 빠르게 개발자 커리어를 시작할 수 있는 길은 없다**고 판단하였고 지금도 그 생각은 변함이 없다. _게다가 한 달 30만 원씩 돈을 받으면서 공부할 수 있다!_  `그러나 국비지원 과정의 여러 한계점은 부정할 수 없는데 이는 나중에 기회가 있으면 써볼 계획이다.`
    
 당시 내가 교육과정을 선택한 기준은 다음과 같았다.
 ~~~
 1. 당장 시작할 수 있는 과정   
-2. 교육기간이 긴 과정    
-3. 하드웨어가 접목된 과정
+2. 교육 기간이 긴 과정    
+3. 하드웨어 제어가 포함된 과정
 ~~~
-1, 2번은 내 초조함과 불안함이 반영된 결과였고 3번은 어린시절 컴퓨터 조립하던 생각이 반영된 요소였는데 지금에서는 참 아쉬운 선택기준이다. 혹시라도 국비지원교육과정을 고민하는 사람이 있다면 반드시 아래기준으로 선택하길 바란다.
+1, 2번은 내 초조함과 불안함이 반영된 결과였고 3번은 어린 시절 컴퓨터 조립하던 생각이 반영된 요소였는데 지금에서는 참 아쉬운 선택기준이다. 혹시라도 국비지원 교육 과정을 고민하는 사람이 있다면 반드시 아래 기준으로 선택하길 바란다.
 ~~~
 1. 기본에 충실한 과정(컴퓨터공학의 전필과목을 비중있게 다루는)
 2. 기간은 6개월 이하
-3. C/C++, JAVA 등 언어 한가지에 집중하는 과정
-4. 딥러닝, 빅데이터, 블록체인 같은 트렌디한 기술과정은 피할것
+3. C/C++, JAVA 등 언어 한 가지에 집중하는 과정
+4. 딥러닝, 빅데이터, 블록체인 같은 트렌디한 기술과정은 피할 것
 ~~~
    
-하여 우여곡절 끝에 내가 선택한 과정은 대한상공회의소 서울기술교육센터에서 진행하는 9개월 과정이었는데 과정명이 무려 **IoT기반 임베디드SW 및 응용SW 엔지니어 양성과정**이다. `지금보니 과정명부터가 모순이다.` ~~`화려하면서 심플하게 해주세요.`~~ ~~`클래식하지만 모던하게`~~
+하여 우여곡절 끝에 내가 선택한 과정은 대한상공회의소 서울기술교육센터에서 진행하는 9개월 과정이었는데 과정명이 무려 **IoT기반 임베디드SW 및 응용SW 엔지니어 양성과정**이다. `지금 보니 과정명부터가 모순이다.` ~~`화려하면서 심플하게 해주세요.`~~ ~~`클래식하지만 모던하게`~~
 
 
 ## _국비지원학원
 
-내가 수강했던 과정은 임베디드 리눅스 환경에서 커널포팅 혹은 디바이스 드라이버를 개발하는 데 중점을 두고 수업을 진행했다. 여기에 더하여 IoT 개발자를 양성한다는 명분(?)으로 추가 과목들을 배웠는데 워낙 짧은 기간에 여러가지를 진행하다보니 추가 과목은 사실 크게 도움되진 않았다. 예를 들어 Database 1주, JAVA 2주, Android 2주, C++ 2주 이런 식이었다. `그나마 천운이 따른 것은 좋은 강사님들을 만났다는 것인데 그분들의 열정이 아니었다면 내가 개발자가 될 가능성은 희박했을 것이다.`
+내가 수강했던 과정은 임베디드 리눅스 환경에서 커널포팅 혹은 디바이스 드라이버를 개발하는 데 중점을 두고 수업을 진행했다. 여기에 더하여 IoT 개발자를 양성한다는 명분(?)으로 추가 과목들을 배웠는데 워낙 짧은 기간에 여러 가지를 진행하다 보니 추가 과목은 사실 크게 도움 되진 않았다. 예를 들어 Database 1주, JAVA 2주, Android 2주, C++ 2주 이런 식이었다. `그나마 천운이 따른 것은 좋은 강사님들을 만났다는 것인데 그분들의 열정이 아니었다면 내가 개발자가 될 가능성은 희박했을 것이다.`
    
-그렇게 오전 9시부터 오후 6시까지 9개월 동안 쉼없이 달렸다. 그 중 7개월 정도는 수업과 실습 형태로 진행되었고 마지막 2개월 정도는 최종 프로젝트 기간이었는데 이 시기를 많은 학생이 힘들어했다. 하나 둘 취업하는 학생들이 생기면서 분위기가 어수선해지고, 남아있는 학생들은 들뜬 분위기와 반복되는 면접탈락으로 지쳐갔다. 나 역시 이 시기에 18개 회사에 이력서를 제출했고, 그 중 4곳에서 면접제의를 받았다. 그리고 면접 직후에 `"떨어졌구나"`라고 느꼈던 회사에서 꿈에 그리던 **최종합격 통보**를 받으며 개발자를 시작하게 되었다.    
+그렇게 오전 9시부터 오후 6시까지 9개월 동안 쉼 없이 달렸다. 그중 7개월 정도는 수업과 실습 형태로 진행되었고 마지막 2개월 정도는 최종 프로젝트 기간이었는데 이 시기를 많은 학생이 힘들어했다. 하나둘 취업하는 학생들이 생기면서 분위기가 어수선해지고, 남아있는 학생들은 들뜬 분위기와 반복되는 면접 탈락으로 지쳐갔다. 나 역시 이 시기에 18개 회사에 이력서를 제출했고, 그중 4곳에서 면접 제의를 받았다. 그리고 면접 직후에 `"떨어졌구나"`라고 느꼈던 회사에서 꿈에 그리던 **최종합격 통보**를 받으며 개발자를 시작하게 되었다.    
    
 ## _최종 프로젝트는??
    
-사실 나는 최종 프로젝트를 다 끝내지 못하고 취업하였다. 여기에는 사정이 좀 있는데 함께 프로젝트를 하기로 했던 팀원 두 명이 프로젝트 시작과 동시에 취업해버리는(?) 바람에 혼자서 3명 분을 하게되었기 때문이다. 
+사실 나는 최종 프로젝트를 다 끝내지 못하고 취업하였다. 여기에는 사정이 좀 있는데 함께 프로젝트를 하기로 했던 팀원 두 명이 프로젝트 시작과 동시에 취업해버리는(?) 바람에 혼자서 3명분을 하게 되었기 때문이다. 
    
 ![](/images/blog_image/alone.jpg#center75)
 _뭐야 내 팀원 돌려줘요_
    
-그러나 이때 고생한것이 헛되진 않았다. 구현 목표 기능 중 사용자의 얼굴을 인식해 보안을 해제하는 기능이 있었는데 이 기능을 구현하느라 처음으로 OpenCV를 사용하게 되었고, 그때 영상처리 분야에 빠져 지금까지 하고 있으니 사실 내 커리어에 중요 전환점이 아닌가 싶다.
+그러나 이때 고생한 것이 헛되진 않았다. 구현 목표 기능 중 사용자의 얼굴을 인식해 보안을 해제하는 기능이 있었는데 이를 구현하느라 처음으로 OpenCV를 사용하게 되었고, 그때 영상처리 분야에 빠져 지금까지 하고 있으니 사실 내 커리어에 중요 전환점이 아닌가 싶다.
    
 ## +면접 후기   
 
-**첫 번째**회사는 엑스레이 장비를 만드는 회사였다. 사무실 한켠에서 1:1 면접을 진행했는데 면접을 진행하던 분이 굉장히 피곤해 하셨다는 것과 "열정이 넘치는 개발자는 금새 지친다"고 하셨던 게 기억에 남는다. 굉장히 지친 얼굴로 그런 말을 하셔서 자조섞인 말처럼 들린다는 생각이 들었었다. 결과는 `불합격`.
+**첫 번째** 회사는 엑스레이 장비를 만드는 회사였다. 사무실 한 켠에서 1:1 면접을 진행했는데 면접을 진행하던 분이 굉장히 피곤해하셨다는 것과 "열정이 넘치는 개발자는 금세 지친다"고 하셨던 게 기억에 남는다. 굉장히 지친 얼굴로 그런 말씀을 하셔서 자조 섞인 말처럼 들린다는 생각이 들었었다. 결과는 `불합격`.
 
-**두 번째**회사는 CCTV를 만드는 회사였다. 서류합격후 간단한 알고리즘 과제를 내줬었는데 약간 고민하면 풀 수 있는 수준의 문제였다. 코드를 작성하고 보내기 직전 함수가 지저분해 보여서 코드를 정리한다고 몇가지를 수정해서 보냈는데 거기서 버그가 생겼다. 메일을 보낸 직후에 이를 깨닫고 메일을 다시 보냈으나, _개발자가 디버깅 한 번 없이 코드를 보냈다는 점_ 에서 받아들일 수 없다는 회신을 받았다. 아쉽긴했지만 나 역시 반박할 수 없는 내용이라 꺠끗하게 포기했다. 결과는 당연히 `불합격`.
+**두 번째** 회사는 CCTV를 만드는 회사였다. 서류합격 후 간단한 알고리즘 과제를 내줬었는데 약간 고민하면 풀 수 있는 수준의 문제였다. 코드를 작성하고 보내기 직전 함수가 지저분해 보여서 코드를 정리한다고 몇 가지를 수정해서 보냈는데 거기서 버그가 생겼다. 메일을 보낸 직후에 이를 깨닫고 메일을 다시 보냈으나, _개발자가 디버깅 한번 없이 코드를 보냈다는 점_ 에서 받아들일 수 없다는 회신을 받았다. 아쉽긴 했지만 나 역시 반박할 수 없는 내용이라 깨끗하게 포기했다. 결과는 당연히 `불합격`.
 
-**세 번째**회사는 열화상 카메라를 만드는 회사였다. 이곳은 같이 수업을 듣던 3명이서 같이 지원하고 동시에 면접을 진행하였다. 면접자체는 무난했고 다음날 세 명 모두 최종합격 통보를 받았다. 그런데 3일 뒤에 같이 지원했던 두 명이 연봉협상 전화 받았냐는 카톡을 보내왔다. 물론 나는 그런 전화를 받은 기억이 없었기에 아직 못 받았다고 답했는데 이때부터 뭔가 이상한 느낌이 들었다. 그리고 역시나 그날 저녁 `내부 회의결과 나는 채용대상에서 제외하게 되었다`는 전화를 받았다. 정말 저렇게만 말하고 전화를 끊어 버려서 자세한 사정은 모르겠지만 뭐 그렇게 되었다는데 어쩌겠는가하고 받아들였다. 결과는 `불합격`. 
+**세 번째** 회사는 열화상 카메라를 만드는 회사였다. 이곳은 같이 수업을 듣던 3명이 같이 지원하고 동시에 면접을 진행하였다. 면접 자체는 무난했고 다음 날 세 명 모두 최종합격 통보를 받았다. 그런데 3일 뒤에 같이 지원했던 두 명이 연봉협상 전화 받았냐는 카톡을 보내왔다. 물론 나는 그런 전화를 받은 기억이 없었기에 아직 못 받았다고 답했는데 이때부터 뭔가 이상한 느낌이 들었다. 그리고 역시나 그날 저녁 `내부 회의 결과 나는 채용대상에서 제외하게 되었다`는 전화를 받았다. 정말 저렇게만 말하고 전화를 끊어 버려서 자세한 사정은 모르겠지만 "뭐 그렇게 되었다는데 어쩌겠는가"하고 받아들였다. 결과는 `불합격`. 
 
-**네 번째**회사는 안과용 의료장비를 만드는 회사였다. 일단은 지금까지와 달리 깨끗한 사옥이 있는 회사라 욕심이 좀 났었다. 면접은 이력서 기반 질문 -> 전공기초에 대한 질문 -> 화이트보드 손코딩 -> 영어 문서 해석 테스트 순서로 진행되었다. 이 중 화이트보드 손코딩을 완전히 망쳤었는데 항상 IDE의 도움을 받으며 개발하다보니 이런 방식이 너무 낯설게 느껴졌었다. `사실 화이트보드에 코딩하는 면접 방식은 굉장히 흔한 방식이라 당연히 연습을 했어야하는데 내 준비가 부족했다.` 결국 2시간의 면접이 끝난뒤 "아 떨어졌구나"라고 생각하며 회사를 나왔다. 그러나 웬걸 1주일 뒤 2차 면접 연락을 받았고 2차 면접 직후 **다음주부터 출근하라**는 말을 들었다.
+**네 번째** 회사는 안과용 의료장비를 만드는 회사였다. 일단은 지금까지와 달리 깨끗한 사옥이 있는 회사라 욕심이 좀 났었다. 면접은 이력서 기반 질문 -> 전공기초에 대한 질문 -> 화이트보드 손코딩 -> 영어 문서 해석 테스트 순서로 진행되었다. 이 중 화이트보드 손코딩을 완전히 망쳤었는데 항상 IDE의 도움을 받으며 개발하다 보니 이런 방식이 너무 낯설게 느껴졌었다. `사실 화이트보드에 코딩하는 면접 방식은 굉장히 흔한 방식이라 당연히 연습을 해야 했는데 내 준비가 부족했다.` 결국 2시간의 면접이 끝난 뒤 "아 떨어졌구나"라고 생각하며 회사를 나왔다. 그러나 웬걸 1주일 뒤 2차 면접 연락을 받았고 2차 면접 직후 **다음 주부터 출근하라**는 말을 들었다.
 
-# 3. 돈받는 개발자 생활
+# 3. 돈 받는 개발자 생활
    
-2018년 3월 15일부터 나는 돈받는 개발자 생활을 시작했다. 여기서 굳이 돈을 받게되었다는 것을 언급하는 이유는 내가 황금만능주의자라서가 아니라 ~~`돈을 좋아하긴 한다.`~~ 돈을 받고 일한다는 것의 의미를 잘 알고 있기 때문이다.
+2018년 3월 15일부터 나는 돈 받는 개발자 생활을 시작했다. 여기서 굳이 돈을 받게 되었다는 것을 언급하는 이유는 내가 황금만능주의자라서가 아니라 ~~`돈을 좋아하긴 한다.`~~ 돈을 받고 일한다는 것의 의미를 잘 알고 있기 때문이다.
    
-나는 어린시절부터 갖은 알바를 섭렵한 경험이 있다. 그래서 돈의 의미를 잘 알고있는데 누군가에게 돈을 받는다는 것은 그 일을 해내야할 의무가 생긴다는 것을 의미한다. 이것은 지극히 당연한 계약의 기초 개념이지만 한편으로 무서운 말이기도하다. 내가 받는 돈의 가치를 내 스스로가 증명할 수 있어야 한다는 말과 같기 때문이다. 아마 많은 신입사원이 나와 같은 생각으로 커리어를 시작했을 것이다. 
+나는 어린 시절부터 온갖 알바를 뛰어온 알바몬이었기에 돈의 의미를 잘 알고 있는데, 누군가에게 돈을 받는다는 것은 그 일을 해내야 할 의무가 생긴다는 것을 의미한다. 이것은 지극히 당연한 계약의 기초 개념이지만 한편으로 무서운 말이기도 하다. 내가 받는 돈의 가치를 나 스스로가 증명할 수 있어야 한다는 말과 같기 때문이다. 아마 많은 신입사원이 나와 같은 생각으로 커리어를 시작했을 것이다. 
    
 > 내가 밥값은 할 수 있을까?
    
-나 역시 이와 같은 생각 때문에 내가 배운것들로 빨리 무언가를 개발해야 한다는 강박에 시달렸는데 지금 생각해보면 그럴 필요까진 없었던 것 같다. 게다가 대부분 회사 업무란 어느정도 특수성이 있어서 어차피 새로 업무를 배우는 적응기간이 필요하다. 그러니 혹 이 글을 읽는 신입사원이 있다면 마음을 편하게 갖길 바란다.   
+나 역시 이와 같은 생각 때문에 내가 배운 것들로 빨리 무언가를 개발해야 한다는 강박에 시달렸는데 지금 생각해보면 그럴 필요까진 없었던 것 같다. 게다가 대부분 회사 업무란 어느 정도 특수성이 있어서 어차피 새로 업무를 배우는 적응 기간이 필요하다. 그러니 혹 이 글을 읽는 신입사원이 있다면 마음을 편하게 갖길 바란다.   
    
 
 ![](/images/blog_image/relax.jpg#center75)
 
 ## _새로 배운 업무들   
-나는 임베디드 리눅스 개발환경에서 C언어로 개발을 배웠기에 회사에서도 비슷한 업무를 맡게 될 것이라 생각했다. 그러나 실상은 Windosw 운영체제에서 C++로 개발을 해야했다. 결국 처음부터 다시 배운다는 생각으로 C++ 공부를 시작했는데 C++는 아주 혹독한 놈이었다.   
+나는 임베디드 리눅스 개발환경에서 C언어로 개발을 배웠기에 회사에서도 비슷한 업무를 맡게 되리라 생각했다. 그러나 실상은 Windows 운영체제에서 C++로 개발을 해야 했다. 결국 처음부터 다시 배운다는 생각으로 C++ 공부를 시작했는데 C++는 아주 혹독한 놈이었다.   
    
 ![](/images/blog_image/c++21days.png#center75)
-_C++를 마스터 하는 가장 빠른 방법_
+<center>_C++를 마스터하는 가장 빠른 방법_</center>
    
-그러나 미운정이 무섭다고 계속 쓰다보니 요새는 매력적인 언어라는 생각이드는 지경에(?) 이르렀다. 물론 아직도 C++ 중급이라는 말은 차마 못하는 수준이지만 점차 나아지고 있다. 이와 더불어 영상처리라는 새로운 놀이터도 얻었는데 알면 알수록 어려운 분야다. 
+그러나 미운 정이 무섭다고 계속 쓰다 보니 요새는 매력적인 언어라는 생각이 드는 지경에(?) 이르렀다. 물론 아직도 C++ 중급이라는 말은 차마 못 하는 수준이지만 점차 나아지고 있다. 이와 더불어 영상처리라는 새로운 놀이터도 얻었는데 알면 알수록 어려운 분야다. 
 
 ![](/images/blog_image/easy.jpg#center50)
 <center>_고인물 놀이터_</center>   
@@ -115,25 +115,56 @@ _C++를 마스터 하는 가장 빠른 방법_
    
 **2018년**
 
->* 망막 측정 신호를 이미지로 변환하는 Tool 개발.
->* 안구검사장비 데이터 Backup & Migration Tool 개발.
->* 검사장비 카메라 교체로 인한 신규 카메라 Porting. 
+>* 망막 측정 신호를 OCT Angio 이미지로 변환하는 Tool 개발.
+>* 안구 검사장비 데이터 Backup & Migration Tool 개발.
+>* Fundus 카메라 교체로 인한 신규 카메라 Porting. 
 >* 망막 이미지 자동 Enhancement 기능 구현.
   
 **2019년**
 
->* Fundus Camera 신규 모델 SW 개발.
->* 각막 측정장비의 광학적 왜곡을 보정하는 기능 구현.
->* 막망내 무혈관 영역 자동감지 기능 구현.
+>* 신규 Fundus Camera 제품 SW 개발.
+>* 각막 측정 장비의 광학적 왜곡 보정 기능 구현.
+>* 막망 내 무혈관 영역 자동감지 기능 구현.
 >* 망막 이미지의 반사광 & 그림자 자동보정 기능 구현.
 >* Optic disc 자동 detection and segmentation 기능 구현. 
    
-이렇게 써놓고 보니 고작 9줄로 정리되긴 하지만 2년간 열심히 일했다고 자부한다. 조금 민망하지만 2년간 워커홀릭처럼 지내온 면이 없지않은데 이는 실무 경험이 실력 향상의 지름길이라는 믿음 때문이었다. 물론 이 믿음은 그릇된 맹신은 아니었고 덕분에 2년 전에 비해 많은 진보를 이루었다. 하지만 최근 들어 어떠한 생각을 떨칠 수 없는데 그것은 `실무가 실력 향상의 필수조건이지만 충분조건은 아니다.`라는 것이다.
+이렇게 써놓고 보니 고작 9줄로 정리되긴 하지만 2년간 열심히 일했다고 자부한다. 조금 민망하지만 2년간 워커홀릭처럼 지내온 면이 없지 않은데 이는 실무 경험이 실력 향상의 지름길이라는 믿음 때문이었다. 물론 이 믿음은 그릇된 맹신은 아니었고 덕분에 2년 전에 비해 많은 진보를 이루었다. 하지만 최근 들어 어떠한 생각을 떨칠 수 없는데 그것은 `"실무가 실력 향상의 필수조건이지만 충분조건은 아니다."`라는 것이다.
 
-## _일과 자기개발
-업무를 진행하다보면 선택의 기로에 놓일 때가 많다. 이러한 선택은 대부분 개발을 완료해야하는 일정 즉, `데드라인`이 존재하기에 발생하는데 
+## _일과 자기 개발   
+업무를 진행하다 보면 선택의 기로에 놓일 때가 많다. 이러한 선택은 대부분 개발을 완료해야 하는 일정 즉, `데드라인`이 존재하기에 발생하는데, 제품을 언제 출시하느냐는 생각보다 중요한 문제이므로 개발자가 만족하는 코드가 나올 때까지 무작정 기다릴 수는 없다. 따라서 개발자는 새로운 방법을 시도하기보다는 이미 안정성이 검증된 기존 코드나 라이브러리를 사용할 때가 많고 이것이 반복되다 보면 어느 순간 실력이 정체된 느낌을 받는다.   
 
+이를 타파하기 위해선 의식적으로 세부 동작 방식을 고민하고 새로운 시도를 도입하는 노력이 필요하지만, 본래 일이란 끝이 없기 때문에 이런 여유가 저절로 주어지진 않는다.   
+
+![](/images/blog_image/todo.jpg#center50)
+<center>_영원한 TO DO_</center>   
+
+하여 나는 지속 성장을 위해 규칙적인 자기 개발 시간을 확보해야 한다는 결론에 다다랐고 그 시작으로 공부한 내용을 정리하고 공유하는 블로그를 개설하기로 마음먹게 되었다.
 
 # 4. 블로그를 시작하며
 
-책 들고 다니기
+왜 블로그를 시작하게 되었는지 얘기하려고 참 먼 길을 돌아왔다. 요약하면 `주니어 개발자의 성장 욕구 충족`을 목표로 한 공간이다. 그리고 조금 욕심을 내자면 졸필이나마 이 블로그가 다른 개발자들에게 작은 도움이라도 되길 바라본다.
+
+## _2020년 계획
+   
+>* C++ 더 깊이 공부하고 정리해서 포스팅하기
+>* Digital Image processing 공부하고 정리해서 포스팅하기
+>* Python, TensorFlow 공부하고 정리해서 포스팅하기
+>* 최근 개설한 github 잔디밭 채우기
+>* Open source contribute 하기
+>* 개발자 커뮤니티에 참석하기
+>* 매일 점심시간에 운동하기
+
+## _추신    
+웹 개발의 'ㅇ'도 모르는 내가 이 블로그를 만드느라 많은 사람에게 빚을 졌다.   
+
+* Hugo 설치와 기본 사용법을 정리해 주신 [한정수](https://github.com/Integerous/Integerous.github.io)님
+* Hugo의 기본 구조와 커스터마이징 방법을 정리해 주신 [ialy](https://ialy1595.github.io/post/blog-construct-1/)님   
+* 훌륭한 Hugo Theme를 제작해주신 [lubang](https://blog.lulab.net/projects/2019-05-hugo-hello-programmer-theme-v2/)님
+* 그리고 퇴근 후에도 컴퓨터 앞에 앉아있는 남편을 참아준 사랑하는 아내에게 감사한다.
+
+## _사족   
+예수님은 2000년 전 이스라엘 나사렛이라는 동네에서 목수의 아들로 자라셨기에 사람들은 그분을 `목수의 아들 나사렛 예수`라고 불렀다. 만약 현대 한국 사회에 예수님이 태어나셨다면 `개발자의 아들 판교의 예수`로 불리셨을까?
+   
+![](/images/blog_image/jesus1.jpg#center50)
+<center>_sudo rm -rf people/sins/* 하노라_</center>   
+![](/images/blog_image/jesus3.jpg#center50)
