--- a/content/post/신학전공 개발자의 개발입문기.md
+++ b/content/post/신학전공 개발자의 개발입문기.md
@@ -9,7 +9,7 @@ cover: "/images/blog_image/bg-index.jpg"
 
 이미 제목에서 밝혔지만 나는 흔히 말하는 비전공 출신 개발자다. 물론 요즘은 워낙 비전공 개발자가 많다 보니 특별한 이력은 아니지만, 굳이 학문적 유사성을 따진다면 신학과 컴퓨터공학은 양끝단에 있지 않나 싶다. ~~`뇌피셜`~~   
 
-그러나 일반적 기대와 달리 이 글의 성격은 _"당신도 이렇게 하면 개발자가 될 수 있다!"_ 혹은 _"고난과 역경을 극복한 비전공 개발자의 성공기"_ 같은 거창한 것은 아니다. 굳이 따지자면 담백하게 소개하는 전직 요약기 정도가 적당하다.   
+그러나 일반적 기대와 달리 이 글의 성격은 _"당신도 이렇게 하면 개발자가 될 수 있다!"_ 라거나 _"고난과 역경을 극복한 비전공 개발자의 성공기"_ 같은 거창한 것은 아니다. 굳이 따지자면 담백하게 소개하는 전직 요약기 정도가 적당하다.   
 
 ![](/images/blog_image/olaf1.jpg#center75)
 ![](/images/blog_image/olaf2.jpg#center75)   
@@ -30,7 +30,7 @@ cover: "/images/blog_image/bg-index.jpg"
 
 나의 계획들이 너무 낙관적이었음을 깨닫는 데는 한 달이 채 걸리지 않았다. 수많은 회사에 이력서를 넣었지만 대부분의 회사는 면접 기회 조차 잡지 못했다. 이때 나는 일종의 악순환에 빠져 있었는데, 생계를 책임지고 있는 유부남으로서 서둘러 취업해야 한다는 초조함에 무분별한 이력서를 남발했고, 이는 서류탈락과 초조함 증가로 이어졌다.   
 
-이때 이러한 악순환을 끊어준 것이 아내였다. "일단은 내가 돈 벌 테니 좀 더 준비해서 취직해"라는 말과 함께 진짜로 **금세 취업을 해버렸다.** `지금 생각해도 능력자가 아닐 수 없다.` 덕분에 나는 조금 숨통이 트여 진지하게 고민할 기회가 생겼고. 그 결과 오래전부터 가슴 한 켠에 묻어둔 선택지를 꺼내게 되었다.   
+지금 생각해 보면 그때 그 기업들에 들어가지 못 한게 참 다행스러운 일이지만, 그 당시에는 참 힘든 시기를 보낸다고 생각했다. 내가 너무 고민하는 모습이 보였는지 어느날 아내가 이런 얘기를 했다. "남편 일단은 내가 돈 벌 테니 좀 더 준비해서 취직해~"그리고 얼마 지나지 않아 진짜로 **금세 취업을 해버렸다.** `지금 생각해도 능력자가 아닐 수 없다.` 덕분에 나는 조금 숨통이 트여 진지하게 고민할 기회가 생겼고. 그 결과 오래전부터 가슴 한 켠에 묻어둔 선택지를 꺼내게 되었다.   
 
 ![](/images/blog_image/study.jpg#center50)
 
@@ -42,7 +42,7 @@ cover: "/images/blog_image/bg-index.jpg"
 
 # 2. Into the Unknown 
 
-일단 시작하기로 마음먹은 이상 망설일 것은 없었다. 온종일 컴퓨터 앞에 앉아 찾아본 결과 국비지원 교육에 SW 개발자 양성코스가 있다는 것을 알게 되었다. 물론 이 과정에서 국비지원 교육에 대한 여러 가지 부정적 정보도 접하게 되었으나, 프로그래밍에 완벽히 문외한인 입장에서 **국비지원 교육보다 빠르게 개발자 커리어를 시작할 수 있는 길은 없다**고 판단하였고 지금도 그 생각은 변함이 없다. _게다가 한 달 30만 원씩 돈을 받으면서 공부할 수 있다!_  `그러나 국비지원 과정의 여러 한계점은 부정할 수 없는데 이는 나중에 기회가 있으면 써볼 계획이다.`
+일단 시작하기로 마음먹은 이상 망설일 것은 없었다. 온종일 인터넷을 뒤져 본 결과 국비지원으로 SW 교욱을 받을 수 있다는 걸 알게 되었다. 물론 이 과정에서 국비지원 교육에 대한 여러 가지 부정적 정보도 접하게 되었으나, 프로그래밍에 완벽히 문외한인 입장에서 **국비지원 교육보다 빠르게 개발자 커리어를 시작할 수 있는 길은 없다**고 판단하였고 지금도 그 생각은 변함이 없다. _게다가 한 달 30만 원씩 받으면서 공부할 수 있다!_  `그러나 국비지원 과정의 여러 한계점은 부정할 수 없는데 이는 나중에 기회가 있으면 써볼 계획이다.`
    
 당시 내가 교육과정을 선택한 기준은 다음과 같았다.
 ~~~
@@ -65,7 +65,7 @@ cover: "/images/blog_image/bg-index.jpg"
 
 내가 수강했던 과정은 임베디드 리눅스 환경에서 커널포팅 혹은 디바이스 드라이버를 개발하는 데 중점을 두고 수업을 진행했다. 여기에 더하여 IoT 개발자를 양성한다는 명분(?)으로 추가 과목들을 배웠는데 워낙 짧은 기간에 여러 가지를 진행하다 보니 추가 과목은 사실 크게 도움 되진 않았다. 예를 들어 Database 1주, JAVA 2주, Android 2주, C++ 2주 이런 식이었다. `그나마 천운이 따른 것은 좋은 강사님들을 만났다는 것인데 그분들의 열정이 아니었다면 내가 개발자가 될 가능성은 희박했을 것이다.`
    
-그렇게 오전 9시부터 오후 6시까지 9개월 동안 쉼 없이 달렸다. 그중 7개월 정도는 수업과 실습 형태로 진행되었고 마지막 2개월 정도는 최종 프로젝트 기간이었는데 이 시기를 많은 학생이 힘들어했다. 하나둘 취업하는 학생들이 생기면서 분위기가 어수선해지고, 남아있는 학생들은 들뜬 분위기와 반복되는 면접 탈락으로 지쳐갔다. 나 역시 이 시기에 18개 회사에 이력서를 제출했고, 그중 4곳에서 면접 제의를 받았다. 그리고 면접 직후에 `"떨어졌구나"`라고 느꼈던 회사에서 꿈에 그리던 **최종합격 통보**를 받으며 개발자를 시작하게 되었다.    
+그렇게 오전 9시부터 오후 6시까지 9개월 동안 쉼 없이 달렸다. 그중 7개월 정도는 수업과 실습 형태로 진행되었고 마지막 2개월 정도는 최종 프로젝트 기간이었는데 이 시기를 많은 학생이 힘들어했다. 하나둘 취업하는 학생들이 생기면서 분위기가 어수선해지고, 남아있는 학생들은 들뜬 분위기와 반복되는 면접 탈락으로 지쳐갔다. 나 역시 이 시기에 18개 회사에 이력서를 제출했고, 그중 4곳에서 면접 제의를 받았다. 그리고 면접 직후에 `"떨어졌구나"`라고 느꼈던 회사에서 꿈에 그리던 **최종합격 통보**를 받으며 개발자 생활을 시작하게 되었다.    
    
 ## _최종 프로젝트는??
    
@@ -88,9 +88,9 @@ _뭐야 내 팀원 돌려줘요_
 
 # 3. 돈 받는 개발자 생활
    
-2018년 3월 15일부터 나는 돈 받는 개발자 생활을 시작했다. 여기서 굳이 돈을 받게 되었다는 것을 언급하는 이유는 내가 황금만능주의자라서가 아니라 ~~`돈을 좋아하긴 한다.`~~ 돈을 받고 일한다는 것의 의미를 잘 알고 있기 때문이다.
+2018년 3월 15일부터 나는 돈 받는 개발자 생활을 시작했다. 여기서 굳이 돈을 받게 되었다는 것을 언급하는 이유는 내가 황금 만능 주의자라서가 아니라 ~~`돈을 좋아하긴 한다.`~~ 돈을 받고 일한다는 것의 의미를 잘 알고 있기 때문이다.
    
-나는 어린 시절부터 온갖 알바를 뛰어온 알바몬이었기에 돈의 의미를 잘 알고 있는데, 누군가에게 돈을 받는다는 것은 그 일을 해내야 할 의무가 생긴다는 것을 의미한다. 이것은 지극히 당연한 계약의 기초 개념이지만 한편으로 무서운 말이기도 하다. 내가 받는 돈의 가치를 나 스스로가 증명할 수 있어야 한다는 말과 같기 때문이다. 아마 많은 신입사원이 나와 같은 생각으로 커리어를 시작했을 것이다. 
+나는 어린 시절부터 온갖 알바를 뛰어온 알바몬이었기에 돈의 의미를 잘 알고 있었다. 누군가에게 돈을 받는다는 것은 그 일을 해내야 할 의무가 생긴다는 것을 의미한다. 이것은 지극히 당연한 계약의 기초 개념이지만 한편으로 무서운 말이기도 하다. 내가 받는 돈의 가치를 나 스스로가 증명할 수 있어야 한다는 말과 같기 때문이다. 아마 많은 신입사원이 나와 같은 생각으로 커리어를 시작했을 것이다. 
    
 > 내가 밥값은 할 수 있을까?
    
