correction of sentence

--- a/content/post/신학전공 개발자의 개발입문기.md
+++ b/content/post/신학전공 개발자의 개발입문기.md
@@ -54,7 +54,7 @@ cover: "/images/blog_image/bg-index.jpg"
 ~~~
 1. 기본에 충실한 과정(컴퓨터공학의 전필과목을 비중있게 다루는)
 2. 기간은 6개월 이하
-3. C/C++, JAVA 등 언어 한 가지에 집중하는 과정
+3. 여러가지 개발언어를 배우기보단 하나의 언어를 깊게 배우는 과정
 4. 딥러닝, 빅데이터, 블록체인 같은 트렌디한 기술과정은 피할 것
 ~~~
    
