--- a/content/post/신학전공 개발자의 개발입문기.md
+++ b/content/post/신학전공 개발자의 개발입문기.md
@@ -42,7 +42,7 @@ cover: "/images/blog_image/bg-index.jpg"
 
 # 2. Into the Unknown 
 
-일단 시작하기로 마음먹은 이상 망설일 것은 없었다. 온종일 인터넷을 뒤져 본 결과 국비지원으로 SW 교욱을 받을 수 있다는 걸 알게 되었다. 물론 이 과정에서 국비지원 교육에 대한 여러 가지 부정적 정보도 접하게 되었으나, 프로그래밍에 완벽히 문외한인 입장에서 **국비지원 교육보다 빠르게 개발자 커리어를 시작할 수 있는 길은 없다**고 판단하였고 지금도 그 생각은 변함이 없다. _게다가 한 달 30만 원씩 받으면서 공부할 수 있다!_  `그러나 국비지원 과정의 여러 한계점은 부정할 수 없는데 이는 나중에 기회가 있으면 써볼 계획이다.`
+일단 시작하기로 마음먹은 이상 망설일 것은 없었다. 온종일 인터넷을 뒤져 본 결과 국비지원으로 SW 교육을 받을 수 있다는 걸 알게 되었다. 물론 이 과정에서 국비지원 교육에 대한 여러 가지 부정적 정보도 접하게 되었으나, 프로그래밍에 완벽히 문외한인 입장에서 **국비지원 교육보다 빠르게 개발자 커리어를 시작할 수 있는 길은 없다**고 판단하였고 지금도 그 생각은 변함이 없다. _게다가 한 달 30만 원씩 받으면서 공부할 수 있다!_  `그러나 국비지원 과정의 여러 한계점은 부정할 수 없는데 이는 나중에 기회가 있으면 써볼 계획이다.`
    
 당시 내가 교육과정을 선택한 기준은 다음과 같았다.
 ~~~
